# not-BDSM-Client

./: CMakeLists.txt  README.md
include/: application.h  leftpanel.h  panel.h  window.h
src/: application.cpp  imgui_impl_sdl2.cpp  imgui_impl_sdlrenderer.cpp  leftpanel.cpp  main.cpp  window.cpp
